# ConvNew

./: .gitignore  .gitigonre  AGENTS.md  CLAUDE.md  README.md  README_CN.md  analyze_outputs.py  build_exe.ps1  create_gradient_test.py  pyproject.toml  test_color.py  test_color_fix.py  test_e6_colors.py  test_firmware_compat.py  test_optimized.py
backup/: GUI_BMPfile_7c.c  converterTo7color_all.cmd
convnew/: main.py
