[project]
name = "convert-gemini-pro"
version = "0.1.0"
description = "A project for file conversion using Gemini Pro."
authors = [
	{ name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "numba>=0.58.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0"
]

[tool.setuptools]
packages = ["convnew"]



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
